# 2x2Solver

./: CMakeLists.txt  CubeState.c  CubeState.h  CubeStateMap.cpp  CubeStateMap.h  CubeStatesReaderWriter.c  CubeStatesReaderWriter.h  CyclicBuffer.c  CyclicBuffer.h  Moves.c  Moves.h  README.md  SolutionsFinder.c  SolutionsFinder.h  StatesComputor.c  StatesComputor.h  UserInputParsing.c  UserInputParsing.h  compile  main.c
